--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
+title: Wellcome Huang's Homepage
+page-top-title: Wellcome
 top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2025. All Rights Reserved.'
+home-subtitle: Wellcome Huang &ensp;|&ensp;黄惠康
+copyright-text: '&copy; Wellcome Huang 2023-2025. All Rights Reserved.'
