--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Wellcome Huang's Homepage
-page-top-title: Wellcome
+page-top-title: Wellcome Huang
 top-section-bg-text: Computer Science
 home-subtitle: Wellcome Huang &ensp;|&ensp;黄惠康
 copyright-text: '&copy; Wellcome Huang 2023-2025. All Rights Reserved.'
